--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -1,17 +1,17 @@
 <!-- Navbar -->
-  <nav class="navbar navbar-expand-md navbar-custom shadow-sm py-3">
-    <div class="container">
-      <a class="navbar-brand fw-bold fs-4 text-white" href="#">MINI DELÍCIAS</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-        <ul class="navbar-nav me-3">
-          <li class="nav-item"><a class="nav-link" href="#home">Início</a></li>
-          <li class="nav-item"><a class="nav-link" href="#ofertas">Pedido</a></li>
-          <li class="nav-item"><a class="nav-link" href="#cardapio">Ofertas</a></li>
-          <li class="nav-item"><a class="nav-link" href="#contato">Contato</a></li>
-        </ul>
-         </div>
+<nav class="navbar navbar-expand-md navbar-custom shadow-sm py-3" role="navigation" aria-label="Menu principal">
+  <div class="container">
+    <a class="navbar-brand fw-bold fs-4 text-white" href="#home">MINI DELÍCIAS</a>
+    <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Alternar navegação">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse justify-content-end mt-3 mt-md-0" id="navbarNav">
+      <ul class="navbar-nav gap-2 gap-md-3 text-center text-md-start">
+        <li class="nav-item"><a class="nav-link" href="#home">Início</a></li>
+        <li class="nav-item"><a class="nav-link" href="#ofertas">Pedido</a></li>
+        <li class="nav-item"><a class="nav-link" href="#cardapio">Ofertas</a></li>
+        <li class="nav-item"><a class="nav-link" href="#contato">Contato</a></li>
+      </ul>
     </div>
-  </nav>
+  </div>
+</nav>
