--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -1,5 +1,5 @@
 <!-- Navbar -->
-<nav class="navbar navbar-expand-md navbar-custom shadow-sm py-3" role="navigation" aria-label="Menu principal">
+<nav class="navbar navbar-expand-md navbar-dark navbar-custom shadow-sm py-3" role="navigation" aria-label="Menu principal">
   <div class="container">
     <a class="navbar-brand fw-bold fs-4 text-white" href="#home">MINI DELÍCIAS</a>
     <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Alternar navegação">
